correct white & grey in the dark mode

--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -3,8 +3,14 @@ $colors: (
     #{null}: (
             cyan: #407bff,
             cyan30: #407bff30,
-            grey: #dedede,
-            white: #ffffff,
+            grey: (
+                #dedede,
+                #cecece,
+            ),
+            white: (
+                #ffffff,
+                #fcf5e8,
+            ),
             primary: (
                 var(--clr--cyan),
                 #0a1836,
